2007-07-08	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Post-release version bump.

2007-07-08	Jannis Pohlmann <jannis@xfce.org>

	* === Released 0.1.1 ===
	* NEWS, configure.in.in: Bump version. Update news.
	* po/*.po: Update Project-Id-Version.

2007-07-08	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/time-out-countdown.c: Properly display remaining
	  minutes when seconds are not displayed. Fixes bug #3221.

2007-07-08	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/*.{c,h}: Fix license headers. The source is 
	  under GPL, not LGPL. Fixes bug #3366.

2007-07-06	Nick Schermer <nick@xfce.org>

	* panel-plugin/Makefile.am: Change LDFLAGS to LDADD to fix
	  compilation with as-needed.

2007-05-29	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/time-out.c: Save settings when the 'Enabled'
	  checkbox in the panel menu has been toggled.

2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/time-out.c: Fix XfceRc being opened read-only
	  in time_out_save_settings() as reported by Nick. Don't 
	  restart the timer after closing the config dialog when
	  the plugin is not active.

2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/time-out-countdown.c: Make seconds to string
	  conversion even better. Introduce new strings. Maybe I should
	  switch to using ngettext ...
	* panel-plugin/time-out.c, 
	  panel-plugin/time-out-lock-screen.{c,h}: Make it possible to
	  hide hours, seconds in the lock screen.
	* 
2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Check for --as-needed support for the 
	  linker.
	* panel-plugin/time-out.c: Only restart the break countdown
	  timer when the break countdown seconds have changed. 

2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Post-release version bump.

2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* === Released 0.1.0 ===
	* NEWS, configure.in.in: Bump version.
	* po/*.po: Update Project-Id-Version.

2007-05-06	Jannis Pohlmann <jannis@xfce.org>
